eXosip (0.8.0)
	* fix processing of 180 Ringing?
	* fix bug when BYE is processed before a 2xx for INVITE.
	
eXosip (0.7.7)
	* memory leaks.
	* tiny bugs, code clean-up.
	
eXosip (0.7.6)
	* fix bug when 1st proxy is using strict routing.
	* support for IPv4 and IPv6.
	* do not send 180 Ringing any more on new INVITEs.
	* close correctly rtp streams in josua.
	* improve the eXosip_event_wait method.
	* performance updated on win32 for event handling.
	
eXosip (0.7.5)
	* small improvements for josua.
	* patch for IPv6 (uncomplete)
	* patch for authentication
	* improve configure.in file
	* allow fancy reason phrase in SIP answer.
	* allow to NAT traversal (firewall IP in SDP packet).
	
eXosip (0.7.3)
	* warning fix.
	* support for multiple registrations.
	* support for authentifications for REGISTER.
	
eXosip (0.7.2)
	* add RTP support with common ucl library.
	* fix some memory leak.
	* improve facility to change the local_sdp_port.
	* add an event when ACK for 2xx is received.
	
eXosip (0.7.1)
	* rewrite of header files and new directory architecture.
	* support for INFO and OPTIONS within calls.
	* support for AUDIO.
	
eXosip (0.6.3)
	* use of event oriented interface in josua.
	
eXosip (0.6.2)
	* New Event oriented interface with applications.
	* support for both MSN or compliant UAs.
	* SUBSCRIBE/NOTIFY for SIMPLE support.
	* script for adding/updating subscribers. (eXosip_addsubscriber.sh)
	
eXosip (0.6.1)
	* INVITE, CANCEL, BYE, REGISTER, MESSAGE, REFER
	* script for adding/updating contact. (eXosip_addfreind.sh)
	* script for adding/updating identity. (eXosip_addidentity.sh)
	* NCURSES interface.
	* options for current session.