@@ -1,13 +1,13 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_REVISION($Revision: 1.30 $)dnl
+AC_REVISION($Revision: 1.31 $)dnl
 AC_PREREQ(2.50)
 AC_INIT(include/eXosip/eXosip.h)
 
 dnl require at least autoconf v 2.00
 dnl AC_COPYRIGHT (COPYRIGHT-NOTICE)
 
-AC_MSG_NOTICE([eXosip                       The Extended Open SIP library.])
-AC_MSG_NOTICE([Copyright (C) 2002,2003,2004 Aymeric MOIZARD - <jack@atosc.org>])
+AC_MSG_NOTICE([eXosip                            The Extended Open SIP library.])
+AC_MSG_NOTICE([Copyright (C) 2002,2003,2004,2005 Aymeric MOIZARD - <jack@atosc.org>])
 
 dnl *********************************************************************
 dnl Source packaging numbers
@@ -15,10 +15,14 @@ EXOSIP_MAJOR_VERSION=0
 EXOSIP_MINOR_VERSION=9
 EXOSIP_MICRO_VERSION=0
 
+SONAME_MAJOR_VERSION=3
+SONAME_MINOR_VERSION=0
+SONAME_MICRO_VERSION=0
+
 dnl program extension
 EXOSIP_VERSION=$EXOSIP_MAJOR_VERSION.$EXOSIP_MINOR_VERSION.$EXOSIP_MICRO_VERSION
 
-LIBEXOSIP_SO_VERSION=`expr $EXOSIP_MINOR_VERSION + $EXOSIP_MAJOR_VERSION`:$EXOSIP_MICRO_VERSION:$EXOSIP_MINOR_VERSION
+LIBEXOSIP_SO_VERSION=$SONAME_MAJOR_VERSION:$SONAME_MINOR_VERSION:$SONAME_MICRO_VERSION
 
 AC_SUBST(LIBEXOSIP_SO_VERSION, $LIBEXOSIP_SO_VERSION)
 AC_SUBST(EXOSIP_VERSION)
